[package]
name = "oxideav-ffv1"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ffv1"
authors = ["Mark Karpeles"]
description = "Pure-Rust FFV1 (RFC 9043) lossless intra-only video codec for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-ffv1"
keywords = ["multimedia", "video", "ffv1", "lossless", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
[dev-dependencies]
oxideav-mkv = "0.0"
